# mkct_kit

./: .gitignore  pyproject.toml  requirements.txt
example/: params.yaml  run_mkct.py
src/mkct/: __init__.py  core.py  mkct_solver.py
